manifests/mealie/mealie.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      priorityClassName: critical
      containers:
      - name: frontend
        image: ghcr.io/mealie-recipes/mealie:v3.27.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
          name: web
        volumeMounts:
          - mountPath: /app/data
            name: data
        resources:
          requests:
            cpu: 200m
            memory: 375Mi
          limits:
            cpu: 1000m
            memory: 550Mi
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mealie

---

apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: web
    name: web
  selector:
    app: mealie
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mealie.cluster.fun
    secretName: mealie-ingress
  rules:
  - host: mealie.cluster.fun
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: mealie
            port:
              name: web
